css/style.css
body, html {
    height: 100%;
    width: 100%;
}

body {
    background-color: #97a579;
    margin: 0;
    padding: 0;
}

div {
    padding:0;
}

p {
    padding:0;
    margin:auto;
    font-family: Lato, sans-serif;
    font-weight: bold;
}

.cormorant-infant-light {
    font-family: ""Meow Script"", serif;
    font-weight: 300;
    font-style: normal;
}

.cormorant-infant-regular {
    font-family: "Cormorant Infant", serif;
    font-weight: 400;
    font-style: normal;
}

.cormorant-infant-medium {
    font-family: "Cormorant Infant", serif;
    font-weight: 500;
    font-style: normal;
}

.cormorant-infant-semibold {
    font-family: "Cormorant Infant", serif;
    font-weight: 600;
    font-style: normal;
}

.cormorant-infant-bold {
    font-family: "Cormorant Infant", serif;
    font-weight: 700;
    font-style: normal;
}

.cormorant-infant-light-italic {
    font-family: "Cormorant Infant", serif;
    font-weight: 300;
    font-style: italic;
}

.cormorant-infant-regular-italic {
    font-family: "Cormorant Infant", serif;
    font-weight: 400;
    font-style: italic;
}

.cormorant-infant-medium-italic {
    font-family: "Cormorant Infant", serif;
    font-weight: 500;
    font-style: italic;
}

.cormorant-infant-semibold-italic {
    font-family: "Cormorant Infant", serif;
    font-weight: 600;
    font-style: italic;
}

.cormorant-infant-bold-italic {
    font-family: "Cormorant Infant", serif;
    font-weight: 700;
    font-style: italic;
}

.windsong-regular {
    font-family: "WindSong", cursive;
    font-weight: 400;
    font-style: normal;
}

.windsong-medium {
    font-family: "WindSong", cursive;
    font-weight: 500;
    font-style: normal;
}

.bonheur-royale-regular {
    font-family: "Bonheur Royale", serif;
    font-weight: 400;
    font-style: normal;
}
@font-face {
    font-family: 'BlackGold_Regular';
    font-style: normal;
    font-weight: normal;
    src: url('/fonts/BlackGold_Personal_use.woff') format('woff');
}

a {
    color: #2c3c23;
    position: relative;
    text-decoration: none;
}

.rsvp-link {
    display: block;
    margin: auto;
    align-content: center;
    padding-top: 2%;
}

.border{
    content:"";
    background: -webkit-linear-gradient(left, rgb(181, 85, 43) 0%, rgb(149, 87, 44) 12%, rgb(228, 147, 76) 47%, rgb(115, 70, 17) 100%);
    box-sizing:inherit;
    height:2px;
    width: 100%;
    position: absolute;
    justify-self:center;
    bottom: 0;
}

.border-small{
    content:"";
    background: -webkit-linear-gradient(left, rgb(181, 85, 43) 0%, rgb(149, 87, 44) 12%, rgb(228, 147, 76) 47%, rgb(115, 70, 17) 100%);
    box-sizing:inherit;
    height:2px;
    width: 100%;
    position: relative;
    left:8vw;
    justify-self:center;
    bottom: 0;
}



/* Container Styles */
.jarallax-wrapper-tall {
    min-height:100vh;
    display:flex;
    justify-content: center;
}

.jarallax-wrapper-short {
    min-height:30vh;
    display:flex;
    justify-content: center;
}

.jarallax {
    position:relative;
    z-index:0;
    opacity:0.9;
    width:100%;
}

.jarallax > .jarallax-img {
    position:absolute;
    object-fit: cover;

    top:0;
    left:0;
    width:100vw;
    height:100%;
    z-index:-1;
}

.content {
    width:100vw;
    max-width:1920px;
    margin: auto;

    border-top:0;
    border-bottom:0;
    border-left: 2px;
    border-right: 2px;
    border-style: solid;
    /* 	border-image: linear-gradient(to bottom, #ccc, #555 66%, #181818) 1 100%; */
    border-image: linear-gradient(to bottom, #95572c, #edaa4e, #95572c) 1 100%;
    text-align: center;
}

#googleForm {
    /*margin-left: auto;/*
    /*margin-right: auto;*/
    text-align: center;
}

.box-RSVP{
    max-width: 800px;
    padding: 5px;
    border: 4px solid #B78846;
    background-color: #2c3c23;

    .box-RSVP-inner {
        position: relative;
        border: 4px solid #B78846;
        padding: 10px;
    }
}

img.icon{
    width: 20%;
}

img.title{
    position:absolute;
    width: 80%;
    top:10%;
    max-width:1000px;
}

img.down-arrow{
    position:absolute;
    width: 15%;
    max-height: 150px;
    top: 70%;
    max-width: 150px;
}

img.badge{
    width:15%;
    padding:10px;
    max-width: 300px;
}

h1 {
    font-size: clamp(1rem, -0.875rem + 7vw, 8.5rem);

    text-transform: uppercase;
    font-weight: 1000;
    letter-spacing: 6px;
    text-align: center;
    font-family: BlackGold_Regular, serif;
    color: #2c3c23;
}

h2 {
    font-size: clamp(1rem, -0.875rem + 8vw, 8rem);
    margin-bottom: 0.5em;
    margin-top: 0.5em;
    text-transform: none;
    letter-spacing: 4px;
    font-weight: 1200;
    font-family: "Bonheur Royale", serif;
    line-height: 1em;
    color: #f2f2f2;
}

h3 {
    font-size: clamp(1rem, -0.875rem + 8vw, 10rem);
    margin-bottom: 0.5em;
    margin-top: 0.5em;
    text-transform: none;
    letter-spacing: 4px;
    font-weight: 1000;
    font-family: BlackGold_Regular, serif;
    line-height: 1em;
    color: #f2f2f2;
    text-align: center;
}

p {
    font-size: clamp(1rem, -0.875rem + 5vw, 4rem);
    margin-top: 1em;
    margin-bottom: 0;
    text-transform: none;
    letter-spacing: 1px;
    font-weight: 200;
    font-family: Helvetica, serif;
    line-height: 1em;
    color: #2c3c23;
}

p.accent {
    font-size: clamp(1rem, -0.1rem + 3vw, 3rem);
    margin-top: 1em;
    margin-bottom: 0;
    text-transform: none;
    letter-spacing: 4px;
    font-weight: 700;
    font-family: "Meow Script", serif;
    line-height: 1em;
    color: #2c3c23;
}

p.small {
    font-size: clamp(1rem, -0.875rem + 5vw, 3rem);
    margin-top: 1em;
    margin-bottom: 0;
    text-transform: none;
    letter-spacing: 4px;
    font-weight: 400;
    font-family: Helvetica, serif;
    line-height: 1em;
    color: #2c3c23;
}

p.footer {
    font-size: clamp(1rem, -0.875rem + 5vw, 3.5rem);
    margin-top: .5em;
    margin-bottom: .3em;
    text-transform: none;
    letter-spacing: 1px;
    font-weight: 600;
    font-family: BlackGold_Regular, serif;
    line-height: 1em;
    color: #2c3c23;
    text-align: center;
}

.wrapper--travel {
    padding: 1vw;
    display:grid;
}

.wrapper {
    padding: 1vw;
    grid-gap: 1vw;
    display:grid;
}

.travel-container {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    width: 100%;
}

.box{
    font-size: 1.5em;
    line-height: 1em;
    font-weight: 200;
    text-align: left;
    padding: .5em;
    border-radius: 1em;
    background-color: rgba(163, 186, 139, 0.73);
}

.citypic{
    border-radius: 1em 1em 0 0;
    margin: 5px 5px 0 5px;
    grid-area: 1 / 1 / 2 / 6;
    min-height: 15vh;
}

.city{
    margin: 2px 5px 2px 5px;
    border-radius: 0;
    grid-area: 2 / 1 / 3 / 6;
}

.airport{
    margin: 2px 5px 2px 5px;
    border-radius: 0;
    grid-area: 3 / 1 / 4 / 6;
}

.hotel{
    margin: 2px 5px 5px 5px;
    border-radius: 0 0 1em 1em;
    grid-area: 4 / 1 / 5 / 6;
}

.background-image--SanFrancisco {
    background-image: url("../img/sf.jpg");
    background-size: cover;
    background-position: center;
}

.background-image--SanJose {
    background-image: url("../img/sj.jpg");
    background-size: cover;
    background-position: center bottom;
}

.box1 {
    margin: 0;
}

.box2 {
    margin: 0;
}

.box3 {
    margin: 0;
}

.box4 {
    text-align: center;
    margin: 0;
}

@media (min-width: 768px)  {

    .wrapper {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 0.25fr .25fr .25fr;
        grid-gap: .5em;
        grid-template-areas:
            "box1 box1"
            "box2 box3"
            "box4 box4";
    }

    .box1 { grid-area: box1; }
    .box2 { grid-area: box2; }
    .box3 { grid-area: box3; }
    .box4 { grid-area: box4; }

    .citypic {
        border-radius: 1em 0 0 1em;
        margin: 5px 0 5px 5px;
        grid-area: 1 / 1 / 4 / 3;
    }

    .city{
        margin: 5px 5px 2px 0;
        border-radius: 0 1em 1em 0;
        grid-area: 1 / 3 / 2 / 6;
    }

    .airport{
        margin: 2px 5px 2px 0;
        border-radius: 0 1em 1em 0;
        grid-area: 2 / 3 / 3 / 6;
    }

    .hotel{
        margin: 2px 5px 5px 0;
        border-radius: 0 1em 1em 0;
        grid-area: 3 / 3 / 4 / 6;
    }

    .background-image--SanFrancisco {
        background-image: url("../img/sf.jpg");
        background-size: cover;
        background-position: center;
    }

    .background-image--SanJose {
        background-image: url("../img/sj.jpg");
        background-size: cover;
    }

    img.icon{
        width: 70%;
    }

    .jarallax-wrapper-tall {
        height:100vh;
    }

    .jarallax-wrapper-short {
        height:50vh;
    }

    .box-RSVP{
        width: 75%;
        max-width: 800px;
        padding: 5px;
        border: 4px solid #B78846;
        background-color: #2c3c23;
        display:block;
        margin:auto;

        .box-RSVP-inner {
            position: relative;
            border: 4px solid #B78846;
            padding: 10px;
        }
    }
}

@media only screen and (min-device-width: 480px)
and (max-device-width: 916px)
and (orientation: landscape) {

    .wrapper {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 0.25fr .25fr .25fr;
        grid-gap: .5em;
        grid-template-areas:
            "box1 box1"
            "box2 box3"
            "box4 box4";
    }

    .box1 { grid-area: box1; }
    .box2 { grid-area: box2; }
    .box3 { grid-area: box3; }
    .box4 { grid-area: box4; }

    .citypic {
        border-radius: 1em 0 0 1em;
        margin: 5px 0 5px 5px;
        grid-area: 1 / 1 / 4 / 3;
    }

    .city{
        margin: 5px 5px 2px 0;
        border-radius: 0 1em 1em 0;
        grid-area: 1 / 3 / 2 / 6;
    }

    .airport{
        margin: 2px 5px 2px 0;
        border-radius: 0 1em 1em 0;
        grid-area: 2 / 3 / 3 / 6;
    }

    .hotel{
        margin: 2px 5px 5px 0;
        border-radius: 0 1em 1em 0;
        grid-area: 3 / 3 / 4 / 6;
    }

    img.icon{
        width: 70%;
    }

    img.title{
        max-width: 500px;
        top: 5%;
    }

    img.down-arrow{
        max-width: 100px;
        top: 65%;
    }

    .jarallax-wrapper-tall {
        height:100vh;
    }

    .jarallax-wrapper-short {
        height:50vh;
    }

    .box-RSVP{
        width: 50%;
        max-width: 800px;
        padding: 5px;
        border: 4px solid #B78846;
        background-color: #2c3c23;

        .box-RSVP-inner {
            position: relative;
            border: 4px solid #B78846;
            padding: 10px;
        }
    }
}

